php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #63570 Bogus warning 'Operation now in progress'
Submitted: 2012-11-21 05:52 UTC Modified: 2021-02-03 11:29 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:1 (100.0%)
From: kakserpompoyaitsam at gmail dot com Assigned: cmb (profile)
Status: Closed Package: Sockets related
PHP Version: 5.4.8 OS: linux
Private report: No CVE-ID: None
 [2012-11-21 05:52 UTC] kakserpompoyaitsam at gmail dot com
Description:
------------
When I'm getting annoying warning while working with non-blocking socket,
For instance: socket_connect(): unable to connect [115]: Operation now in progress
Hence, I have to use @socket_connect and the performance getting compromised.
I do use pecl-libevent, and this error makes no sense at all.
Please do not ignore this little defect, Thank you in advance.

Test script:
---------------
<?php
ini_set('display_errors', 'On');
error_reporting(-1);
$socket = socket_create(AF_INET, SOCK_STREAM, SOL_TCP);
socket_set_nonblock($socket);
socket_connect($socket, '8.8.8.8', 53);


Expected result:
----------------
Warning: socket_connect(): unable to connect [115]: Operation now in progress in 
...

Actual result:
--------------
Empty.

Patches

ignore-warnings-for-nonblocking (last revision 2012-12-03 11:54 UTC by osmanov@php.net)
ignore-EINPROGRESS-warning-nonblocking-2 (last revision 2012-11-28 12:41 UTC by osmanov@php.net)
ignore-EINPROGRESS-warning-nonblocking (last revision 2012-11-28 12:40 UTC by osmanov@php.net)
ignore-EINPROGRESS-warning (last revision 2012-11-28 12:33 UTC by osmanov@php.net)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-11-21 17:24 UTC] kakserpompoyaitsam at gmail dot com
-Summary: Bonus warning 'Operation now in progress' +Summary: Bogus warning 'Operation now in progress'
 [2012-11-21 17:24 UTC] kakserpompoyaitsam at gmail dot com
It would awesome if you include it to 5.5.
 [2012-11-28 12:33 UTC] osmanov@php.net
The following patch has been added/updated:

Patch Name: ignore-EINPROGRESS-warning
Revision:   1354106034
URL:        https://bugs.php.net/patch-display.php?bug=63570&patch=ignore-EINPROGRESS-warning&revision=1354106034
 [2012-11-28 12:40 UTC] osmanov@php.net
The following patch has been added/updated:

Patch Name: ignore-EINPROGRESS-warning-nonblocking
Revision:   1354106408
URL:        https://bugs.php.net/patch-display.php?bug=63570&patch=ignore-EINPROGRESS-warning-nonblocking&revision=1354106408
 [2012-11-28 12:41 UTC] osmanov@php.net
The following patch has been added/updated:

Patch Name: ignore-EINPROGRESS-warning-nonblocking-2
Revision:   1354106490
URL:        https://bugs.php.net/patch-display.php?bug=63570&patch=ignore-EINPROGRESS-warning-nonblocking-2&revision=1354106490
 [2012-12-03 11:54 UTC] osmanov@php.net
The following patch has been added/updated:

Patch Name: ignore-warnings-for-nonblocking
Revision:   1354535643
URL:        https://bugs.php.net/patch-display.php?bug=63570&patch=ignore-warnings-for-nonblocking&revision=1354535643
 [2012-12-03 11:57 UTC] osmanov@php.net
I've uploaded a simple patch. But I'd rather do it via exceptions as in other languages like Python.
 [2013-06-24 18:08 UTC] felipe@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: cataphract
 [2013-06-24 18:08 UTC] felipe@php.net
Gustavo, what do you think about the patch?
 [2013-10-02 14:23 UTC] mike@php.net
Gustavo? Looks good to me.
 [2017-10-24 08:07 UTC] kalle@php.net
-Status: Assigned +Status: Open -Assigned To: cataphract +Assigned To:
 [2021-02-03 11:29 UTC] cmb@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: cmb
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 02:00:01 2026 UTC