Ignore warnings on EAGAIN/EWOULDBLOCK/EINPROGRESS

See bug #63570