ext/sockets/php_sockets.h
@@ -69,7 +69,9 @@ PHP_SOCKETS_API int php_sockets_le_socket(void);
 			int _err = (errn); /* save value to avoid repeated calls to WSAGetLastError() on Windows */ \
 			(socket)->error = _err; \
 			SOCKETS_G(last_error) = _err; \
-			php_error_docref(NULL TSRMLS_CC, E_WARNING, "%s [%d]: %s", msg, _err, php_strerror(_err TSRMLS_CC)); \
+			if (_err != EAGAIN && _err != EWOULDBLOCK && _err != EINPROGRESS) { \
+				php_error_docref(NULL TSRMLS_CC, E_WARNING, "%s [%d]: %s", msg, _err, php_strerror(_err TSRMLS_CC)); \
+			} \
 		} while (0)
 
 ZEND_BEGIN_MODULE_GLOBALS(sockets)
